--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -23,11 +23,46 @@
 #homePageBody a{
     padding: 10px 15px;
     background-color: lightgrey;
-    box-shadow: 2px 2px 8px;
+    box-shadow: 2px 2px 8px black;
     text-align: center;
+    margin-bottom: 1em;
+}
 
+#homePageBody a:last-of-type{
+    background-color: brown;
+    color: white;
 }
 
 a:visited{
     color: black;
+}
+
+#calcBody{
+    text-align: center;
+}
+
+#calcBody h1{
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+#calcBody a{
+    margin: 1.5em 0;
+    padding: 10px 15px;
+    background-color: lightgrey;
+    box-shadow: 2px 2px 8px black;
+    text-align: center;
+}
+
+#calcBody form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    background-color: lightgrey;
+    box-shadow: 2px 2px 8px black;
+    width: 20%;
+    margin:2em auto;
+    padding: 1em;
 }
